Nuevos  cambios en el backend (#15)
* feat: Se quita signos que no van con el botón '<<<<<'

* feat: se añade funcionalidad para escoger departametos, con sus provincias y distritos

* feat: se arregla módulo de cliente con los nuevos requerimientos

* feat: se añade módulo de tipo de cliente

* feat: se hace cambios en la estructura de carpetas archivo(Storage)

* feat: se hace cambios en la estructura de carpetas archivo(UnitOfMeasure)

* docs: se añade script para la inserción del ubigeo

* feat: se agrega dependencia para poder leer archivos .yml

* feat: ajustes para mejorar el módulo de role

* feat: reestructuración de archivos

* feat: se agrega "seeder" para creación de usuario por defecto

* feat: se añade anotacion de spring security para manejar seguridad en los endpoints

* feat: se añade generación de permisos y roles por defecto

* feat: se añade anotacion de spring security

* feat: se eliminan archivos

* feat: se hace cambios por eliminacion de archivos

* feat: se agrega modulo de despacho

* feat: se agrega nuevos enums oara el proyecto

* feat: se arregla escritura del campo access_token

* feat: se aplica corecciones correspondientes al modulo Vendedor

* feat: se aplica cambios debido a eliminacion de archivos

* feat: se agrega modulo familiaProducto

* feat: se aplica cambios en el módulo proveedor

* feat: se añade modulo de Recojo

* feat: se añade modulo de Movimiento

* feat: se corrige campos de producto

* feat: se añade módulo de Cierre

* feat: no tomar en cuenta estos archivos