@@ -1,18 +1,25 @@
 package com.granotec.inventory_api.product;
 
+import com.granotec.inventory_api.common.exception.BadRequestException;
 import com.granotec.inventory_api.common.exception.ResourceNotFoundException;
+import com.granotec.inventory_api.product.dto.ProductRequest;
 import com.granotec.inventory_api.product.dto.ProductResponse;
 import com.granotec.inventory_api.product.dto.ProductStockDetailsResponse;
-import com.granotec.inventory_api.stock.StockRepository;
-import com.granotec.inventory_api.stock.StockService;
+import com.granotec.inventory_api.vendor.Vendor;
+import com.granotec.inventory_api.vendor.VendorRepository;
+import com.granotec.inventory_api.product.familiaProducto.familiaProducto;
+import com.granotec.inventory_api.product.familiaProducto.familiaProductoRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.util.Collections;
+import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
@@ -20,69 +27,133 @@ import java.util.stream.Collectors;
 public class ProductService {
 
     private final ProductRepository productRepository;
-    private final StockRepository stockRepository;
-    private final StockService warehouseStockService;
+    private final VendorRepository vendorRepository;
+    private final familiaProductoRepository familiaRepository;
 
     public Page<ProductResponse> listAll(int page, int size, String q) {
-        Pageable p = PageRequest.of(page, size);
-        Page<Product> pageRes;
-        if (q == null || q.isBlank()) {
-            pageRes = productRepository.findAll(p);
+        Pageable pageable = PageRequest.of(page, size);
+        if (q == null || q.trim().isEmpty()) {
+            Page<Product> p = productRepository.findAll(pageable);
+            List<ProductResponse> list = p.getContent().stream().map(this::toDto).collect(Collectors.toList());
+            return new PageImpl<>(list, pageable, p.getTotalElements());
         } else {
-            pageRes = productRepository.findByNameContainingIgnoreCaseOrCodeContainingIgnoreCase(q, q, p);
+            Page<Product> p = productRepository.findByNombreComercialContainingIgnoreCaseOrCodeContainingIgnoreCase(q, q, pageable);
+            List<ProductResponse> list = p.getContent().stream().map(this::toDto).collect(Collectors.toList());
+            return new PageImpl<>(list, pageable, p.getTotalElements());
         }
-        return pageRes.map(this::toDto);
     }
 
-    public ProductResponse getById(Integer id){
+    public ProductResponse getById(Integer id) {
         Product prod = productRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Producto no encontrado"));
         return toDto(prod);
     }
 
-    public ProductStockDetailsResponse getStockDetails(Integer productId){
-        productRepository.findById(productId).orElseThrow(() -> new ResourceNotFoundException("Producto no encontrado"));
-        var total = stockRepository.sumCantidadByProductoId(productId);
-        var lines = stockRepository.findByProductoId(productId).stream().map(s -> new ProductStockDetailsResponse.StockLine(s.getId(), s.getAlmacen().getId(), s.getLote(), s.getCantidad())).collect(Collectors.toList());
-        return new ProductStockDetailsResponse(productId, total, lines);
+    @Transactional
+    public ProductResponse create(ProductRequest request){
+        if(productRepository.findByCode(request.getCode()).isPresent()){
+            throw new BadRequestException("El código ya existe");
+        }
+        Product p = new Product();
+        p.setCode(request.getCode());
+        p.setNombreComercial(request.getNombreComercial());
+        p.setDescription(request.getDescription());
+        if(request.getProveedorId() != null){
+            Vendor v = vendorRepository.findById(request.getProveedorId()).orElseThrow(() -> new ResourceNotFoundException("Proveedor no encontrado"));
+            p.setProveedor(v);
+        }
+        if(request.getFamiliaId() != null){
+            familiaProducto f = familiaRepository.findById(request.getFamiliaId()).orElseThrow(() -> new ResourceNotFoundException("Familia de producto no encontrada"));
+            p.setFamilia(f);
+        }
+        p.setTipoPresentacion(request.getTipoPresentacion());
+        p.setUnitOfMeasure(request.getUnitOfMeasure());
+        p.setIsLocked(request.getBlocked() != null ? request.getBlocked() : Boolean.FALSE);
+        p = productRepository.save(p);
+        return toDto(p);
     }
 
-    public ProductResponse toDto(Product p){
-        var total = stockRepository.sumCantidadByProductoId(p.getId());
-        return new ProductResponse(p.getId(), p.getCode(), p.getName(), p.getDescription(), p.getPrice(), p.getUnitOfMeasure(), p.getIsLocked(), total);
-    }
-
-    public void setLock(Integer id, boolean locked, String reason){
+    @Transactional
+    public ProductResponse update(Integer id, ProductRequest request){
         Product p = productRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Producto no encontrado"));
-        p.setIsLocked(locked);
-        p.setLockReason(reason);
+        if(request.getCode() != null && !request.getCode().equals(p.getCode())){
+            if(productRepository.findByCode(request.getCode()).isPresent()){
+                throw new BadRequestException("El código ya existe");
+            }
+            p.setCode(request.getCode());
+        }
+        p.setNombreComercial(request.getNombreComercial());
+        p.setDescription(request.getDescription());
+        if(request.getProveedorId() != null){
+            Vendor v = vendorRepository.findById(request.getProveedorId()).orElseThrow(() -> new ResourceNotFoundException("Proveedor no encontrado"));
+            p.setProveedor(v);
+        } else {
+            p.setProveedor(null);
+        }
+        if(request.getFamiliaId() != null){
+            familiaProducto f = familiaRepository.findById(request.getFamiliaId()).orElseThrow(() -> new ResourceNotFoundException("Familia de producto no encontrada"));
+            p.setFamilia(f);
+        } else {
+            p.setFamilia(null);
+        }
+        p.setTipoPresentacion(request.getTipoPresentacion());
+        p.setUnitOfMeasure(request.getUnitOfMeasure());
+        p.setIsLocked(request.getBlocked() != null ? request.getBlocked() : p.getIsLocked());
+        p = productRepository.save(p);
+        return toDto(p);
+    }
+
+    @Transactional
+    public void softDelete(Integer id){
+        Product p = productRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Producto no encontrado"));
+        p.setIsDeleted(Boolean.TRUE);
         productRepository.save(p);
     }
 
-    public void adjustStockForProduct(Integer productId, Long almacenId, String lote, java.math.BigDecimal delta, String notes, String username){
-        // delegate to central stock service (it handles creating stock records and audit)
-        warehouseStockService.recordAdjustment(almacenId, productId, lote, delta, notes, username);
+    @Transactional
+    public void setBlock(Integer id, boolean blocked, String reason){
+        Product p = productRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Producto no encontrado"));
+        p.setIsLocked(blocked);
+        if(reason != null) p.setLockReason(reason);
+        productRepository.save(p);
     }
 
-    // --- Centralized product-specific stock operations ---
+    public ProductStockDetailsResponse getStockDetails(Integer id){
+        // stub: implement real stock aggregation based on your stock tables
+        Product p = productRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Producto no encontrado"));
+        ProductStockDetailsResponse resp = new ProductStockDetailsResponse();
+        resp.setProductId(p.getId());
+        resp.setTotalQuantity(BigDecimal.ZERO);
+        resp.setLines(Collections.emptyList());
+        return resp;
+    }
 
     @Transactional
-    public void decreaseStock(Integer productId, BigDecimal cantidad) {
-        Product p = productRepository.findById(productId)
-                .orElseThrow(() -> new ResourceNotFoundException("Producto no encontrado"));
-        if (Boolean.TRUE.equals(p.getIsLocked())) {
-            throw new ResourceNotFoundException("Producto bloqueado y no permite movimientos");
+    public void adjustStockForProduct(Integer id, Long almacenId, String lote, BigDecimal delta, String notes, String user){
+        Product p = productRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Producto no encontrado"));
+        if(Boolean.TRUE.equals(p.getIsLocked())){
+            throw new BadRequestException("El producto está bloqueado y no permite movimientos de salida/ajuste");
         }
-        warehouseStockService.decreaseByProduct(productId, cantidad);
+        if(delta == null){
+            throw new BadRequestException("Delta es requerido para ajustar stock");
+        }
+        if(delta.compareTo(java.math.BigDecimal.ZERO) == 0){
+            throw new BadRequestException("Delta debe ser distinto de cero");
+        }
+
     }
 
-    @Transactional
-    public void increaseStock(Integer productId, BigDecimal cantidad) {
-        productRepository.findById(productId).orElseThrow(() -> new ResourceNotFoundException("Producto no encontrado"));
-        warehouseStockService.increaseByProduct(productId, cantidad);
+    private ProductResponse toDto(Product p){
+        ProductResponse resp = new ProductResponse();
+        resp.setId(p.getId());
+        resp.setCode(p.getCode());
+        resp.setName(p.getNombreComercial());
+        resp.setDescription(p.getDescription());
+        resp.setUnitOfMeasure(p.getUnitOfMeasure());
+        resp.setTipoPresentacion(p.getTipoPresentacion());
+        resp.setProveedor(p.getProveedor() != null ? p.getProveedor().getRazonSocial() : null);
+        resp.setFamilia(p.getFamilia() != null ? p.getFamilia().getNombre() : null);
+        resp.setIsLocked(p.getIsLocked());
+        return resp;
     }
 
-    @Transactional
-    public void adjustStock(Integer oldProductId, int oldQty, Integer newProductId, BigDecimal newQty) {
-        warehouseStockService.adjustStock(oldProductId, oldQty, newProductId, newQty);
-    }
 }
